--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   backend:
@@ -37,12 +37,11 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
 
   server:
-     build:
-       context: ./src/nginx
-       dockerfile: Dockerfile
-     volumes:
-       - /etc/localtime:/etc/localtime/:ro
-     ports:
-       - ${FRONT_PORT}:80
-     restart: always
-
+    build:
+      context: ./src/nginx
+      dockerfile: Dockerfile
+    volumes:
+      - /etc/localtime:/etc/localtime/:ro
+    ports:
+      - ${FRONT_PORT}:80
+    restart: always
