--- a/src/front/.gitignore
+++ b/src/front/.gitignore
@@ -1,5 +1,4 @@
-.env
-__pycache__/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
