--- a/src/front/package.json
+++ b/src/front/package.json
@@ -13,10 +13,13 @@
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "framer-motion": "^5.4.1",
+    "http-proxy-middleware": "^2.0.1",
     "js-cookie": "^3.0.1",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3",
@@ -25,6 +28,7 @@
   "devDependencies": {
     "@types/node": "16.11.11",
     "@types/react": "^17.0.37",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/styled-components": "^5.1.17",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.4.0",
