update routing in production

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,3 +47,20 @@ services:
     ports:
       - ${FRONT_PORT}:80
     restart: always
+
+  front:
+    ports:
+      - ${NEXT_PUBLIC_FRONTEND_PORT}:3000
+    build:
+      context: ./src/front
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    links:
+      - backend
+    # args:
+    #   NEXT_PUBLIC_FRONTEND_HOST: ${NEXT_PUBLIC_FRONTEND_HOST}
+    #   NEXT_PUBLIC_FRONTEND_PROTOCOL: ${NEXT_PUBLIC_FRONTEND_PROTOCOL}
+    # environment:
+    # NEXT_PUBLIC_BACKEND_HOST: startup-guide.ml
+    # NEXT_PUBLIC_PROTOCOL: https
