--- a/src/nginx/config/etc/nginx/conf.d/default.conf
+++ b/src/nginx/config/etc/nginx/conf.d/default.conf
@@ -1,6 +1,9 @@
 upstream default_backend {
     server backend:2222;
 }
+upstream default_frontend {
+    server front:3000;
+}
 
 server {
     listen 80;
