--- a/src/front/Dockerfile
+++ b/src/front/Dockerfile
@@ -1,7 +1,11 @@
 # Dockerfile
 FROM node:alpine3.12
-ARG NEXT_PUBLIC_FRONTEND_HOST=localhost
-ARG NEXT_PUBLIC_FRONTEND_PROTOCOL=http
+ARG NEXT_PUBLIC_FRONTEND_PROTOCOL
+ARG NEXT_PUBLIC_FRONTEND_HOST
+ARG NEXT_PUBLIC_FRONTEND_PORT
+ARG NEXT_PUBLIC_NGINX_HOST
+ARG NEXT_PUBLIC_NGINX_PORT
+ARG NEXT_PUBLIC_BACKEND_PREFIX
 
 # create destination directory
 RUN mkdir -p /usr/src/next-app
@@ -9,7 +13,6 @@ WORKDIR /usr/src/next-app
 
 # update and install dependency
 RUN apk update && apk upgrade
-# RUN apk add git
 
 # copy the app, note .dockerignore
 COPY package*.json /usr/src/next-app/
