--- a/src/nginx/config/etc/nginx/conf.d/default.conf
+++ b/src/nginx/config/etc/nginx/conf.d/default.conf
@@ -16,11 +16,11 @@ server {
         proxy_pass http://default_backend/;
     }
 
-    location ~* ((css/|js/|img/).*)$ {
-        try_files /$1 =404;
-    }
+    # location ~* ((css/|js/|img/).*)$ {
+    #     try_files /$1 =404;
+    # }
 
     location / {
-        try_files $uri /index.html;
+        proxy_pass http://default_frontend/;
     }
 }
