--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -6,6 +6,6 @@ RUN apt update && apt install -y uvicorn && apt -y install libpq-dev gcc && pip 
 COPY . /app
 WORKDIR /app
 
-CMD uvicorn main:app --reload --port 2222 --host 0.0.0.0 --log-level debug
-# CMD uvicorn main:app --port 2222 --host 0.0.0.0 --log-level debug
+# CMD uvicorn main:app --reload --port 2222 --host 0.0.0.0 --log-level debug
+CMD uvicorn main:app --port 2222 --host 0.0.0.0 --log-level debug
 
