--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
     image: postgres
     restart: always
     hostname: db
-    ports:
-      - 5432:5432
+    # ports:
+    #   - 5432:5432
     # volumes:
     #   - ./postgres-data:/var/lib/postgresql/data:rw
     environment:
