--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ NEXT_PUBLIC_NGINX_HOST=localhost
 NEXT_PUBLIC_NGINX_PORT=8080
 NEXT_PUBLIC_LOCALSTORAGE_KEY=SECRET_SANTA_DATA
 NEXT_PUBLIC_BACKEND_PREFIX=/api/v1
+
+DB_OUT_PORT=5432
