--- a/src/front/package.json
+++ b/src/front/package.json
@@ -14,13 +14,16 @@
     "formik": "^2.2.9",
     "framer-motion": "^5.4.1",
     "http-proxy-middleware": "^2.0.1",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.1",
     "next": "12.0.7",
+    "npm": "^8.3.0",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-snowfall": "^1.1.1",
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
