--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
     hostname: db
     ports:
       - ${DB_OUT_PORT}:5432
-    # volumes:
-    #   - ./postgres-data:/var/lib/postgresql/data:rw
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data:rw
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_HOST: ${POSTGRES_HOST}
