--- a/src/front/package.json
+++ b/src/front/package.json
@@ -21,10 +21,12 @@
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-snowfall": "^1.1.1",
     "react-tooltip": "^4.2.21",
+    "react-yandex-metrika": "^2.6.0",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
