--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,6 @@ NEXT_PUBLIC_NGINX_PORT=8080
 NEXT_PUBLIC_LOCALSTORAGE_KEY=SECRET_SANTA_DATA
 NEXT_PUBLIC_BACKEND_PREFIX=/api/v1
 
+NEXT_PUBLIC_YM_ID=0001
+
 DB_OUT_PORT=5432
